NGP-TWC/wdp-abstract-canvas#593 fix icon alignment (#670)

--- a/canvas_modules/common-canvas/assets/styles/common-properties.css
+++ b/canvas_modules/common-canvas/assets/styles/common-properties.css
@@ -307,7 +307,7 @@ input.number,
 #add-fields-button {
   border: none;
   float: right;
-  padding-top: 4px;
+  padding-top: 2px;
   padding-right: 0px;
   padding-left: 10px;
   margin-right: 0px;
